# python-email-validator

./: .gitignore  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  README.rst  email_validator.py  find_optimal_async_chunk_size.py  main.py  pyproject.toml  release_to_pypi.sh  setup.cfg  setup.py  test_pass.txt  test_requirements.txt
.github/workflows/: test_and_build.yaml
email_validator/: __init__.py  __main__.py  deliverability.py  exceptions.py  exceptions_types.py  gmail_validators.py  rfc_constants.py  syntax.py  types.py  validate_email.py  version.py
email_validator/error_classes/: __init__.py
tests/: __init__.py  mocked-dns-answers.json  mocked_dns_response.py  test_deliverability.py  test_main.py  test_syntax.py
