[metadata]
name = email_validator
version = 1.2.1
description = A robust email syntax and deliverability validation library.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/JoshData/python-email-validator
author = Joshua Tauberer
author_email = jt@occams.info
license = CC0 (copyright waived)
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Libraries :: Python Modules
keywords = email address validator

[options]
packages = find:
install_requires =
    dnspython>=1.15.0
    idna>=2.0.0
python_requires = >=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*, !=3.4.*

[options.entry_points]
console_scripts =
    email_validator=email_validator:main

[bdist_wheel]
universal = 1

[flake8]
max-line-length = 120

[tool:pytest]
testpaths = tests
filterwarnings =
    error
