[metadata]
name = email-validator
version = attr: email_validator.version.__version__
description = A robust email address syntax and deliverability validation library.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/JoshData/python-email-validator
author = Joshua Tauberer
author_email = jt@occams.info
license = Unlicense
license_files = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: The Unlicense (Unlicense)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Software Development :: Libraries :: Python Modules
keywords = email address validator

[options]
packages = find:
install_requires =
    dnspython>=2.0.0 # optional if deliverability check isn't needed
    idna>=2.0.0
python_requires = >=3.8

[options.package_data]
* = py.typed

[options.entry_points]
console_scripts =
    email_validator=email_validator.__main__:main

[flake8]
max-line-length = 120

[tool:pytest]
testpaths = tests
filterwarnings =
    error
markers =
    network: mark a test as requiring Internet access.
